--- a/index.html
+++ b/index.html
@@ -79,25 +79,19 @@ const DATASET = [
     "소속": "서대문구 평생학습관 융복합인재교육센터",
     "작가명": "테스트강의자1",
     "작품명": "테스트",
-    "파일링크": "https://drive.google.com/uc?id=FILE_ID_1&export=download"
-  },
-   {
-    "소속": "서대문구 평생학습관 융복합인재교육센터",
-    "작가명": "테스트강의자1",
-    "작품명": "테김",
-    "파일링크": "https://drive.google.com/uc?id=FILE_ID_1&export=download"
+    "파일링크": "epub/test.epub"
   },
    {
     "소속": "서대문구 평생학습관 융복합인재교육센터",
     "작가명": "테스트강의자2",
     "작품명": "테스트2",
-    "파일링크": "https://drive.google.com/uc?id=FILE_ID_1&export=download"
+    "파일링크": "epub/test2.epub"
   },
    {
     "소속": "서대문구 평생학습관 융복합인재교육센터",
     "작가명": "테스트강의자3",
     "작품명": "테스트3",
-    "파일링크": "https://drive.google.com/uc?id=FILE_ID_1&export=download"
+    "파일링크": "epub/test3.epub"
   },
 ];
 
