--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="card">
     <div class="row">
       <div>
-        <label class="muted">강의자 선택</label>
+        <label class="muted">작가 선택</label>
         <select id="lecturerSelect"></select>
       </div>
       <div>
