--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ const DATASET = [
     "소속": "서대문구 평생학습관 융복합인재교육센터",
     "작가명": "테스트강의자1",
     "작품명": "테스트",
-    "파일링크": "epub/test1.epub"
+    "파일링크": "epub/test.epub"
   },
    {
     "소속": "서대문구 평생학습관 융복합인재교육센터",
