--- a/viewer.html
+++ b/viewer.html
@@ -34,13 +34,13 @@
   <div id="msg" class="error" style="display:none"></div>
   <div class="muted" style="margin-top:10px">같은 저장소(같은 출처)의 EPUB만 미리보기가 안정적으로 동작합니다. 외부 링크는 CORS/보안 정책으로 제한될 수 있습니다.</div>
 </div>
+
 <script src="https://unpkg.com/epubjs/dist/epub.min.js"></script>
 <script>
 (function(){
   const p = new URLSearchParams(location.search);
   const bookUrl = p.get('book');
   const msg = document.getElementById('msg');
-  const viewer = document.getElementById('viewer');
   const tocSel = document.getElementById('toc');
   const prevBtn = document.getElementById('prev');
   const nextBtn = document.getElementById('next');
@@ -58,12 +58,13 @@
   let book, rendition;
   try {
     book = ePub(bookUrl);
-    rendition = book.renderTo("viewer", { width: "100%", height: "100%" });
+    rendition = book.renderTo("viewer", { width: "100%", height: "80vh" });
     rendition.display();
 
     prevBtn.addEventListener('click', () => rendition.prev());
     nextBtn.addEventListener('click', () => rendition.next());
 
+    // TOC
     book.loaded.navigation.then(function(toc){
       tocSel.innerHTML = "";
       (toc.toc || []).forEach(function(ch){
@@ -78,6 +79,7 @@
       });
     });
 
+    // Metadata
     book.loaded.metadata.then(function(m){
       const bits = [];
       if(m.title) bits.push(m.title);
