--- a/viewer.html
+++ b/viewer.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>EPUB 미리보기</title>
   <style>
-    :root{ --bg:#0f172a; --card:#111827; --muted:#94a3b8; --text:#e2e8f0; --accent:#22c55e; --blue:#60a5fa; }
+    :root{ --bg:#0f172a; --card:#111827; --muted:#94a3b8; --text:#e2e8f0; --accent:#22c55e; }
     *{box-sizing:border-box}
     body{margin:0;padding:16px;background:var(--bg);color:var(--text);font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial}
     .wrap{max-width:980px;margin:0 auto}
@@ -32,14 +32,14 @@
   </div>
   <div id="viewer"></div>
   <div id="msg" class="error" style="display:none"></div>
-  <div class="muted" style="margin-top:10px">같은 저장소(같은 출처)의 EPUB만 미리보기가 안정적으로 동작합니다. 외부 링크는 CORS/보안 정책으로 제한될 수 있습니다.</div>
 </div>
 
-<script src="https://unpkg.com/epubjs/dist/epub.min.js"></script>
+<!-- ⚠️ 가능하다면 js/epub.min.js 로 교체 추천 -->
+<script src="js/epub.min.js"></script>
 <script>
 (function(){
-  const p = new URLSearchParams(location.search);
-  let bookUrl = p.get('book');
+  const params = new URLSearchParams(location.search);
+  let bookUrl = params.get('book') || '';
   const msg = document.getElementById('msg');
   const tocSel = document.getElementById('toc');
   const prevBtn = document.getElementById('prev');
@@ -53,17 +53,21 @@
     return;
   }
 
-  // ✅ 경로 자동 보정 (저장소 이름 포함)
+  // 항상 epub/ 하위 폴더로 경로 맞추기
+  bookUrl = bookUrl.replace(/^\\/?/, ''); // 맨 앞 슬래시 제거
+  if(!bookUrl.startsWith('epub/')) {
+    bookUrl = 'epub/' + bookUrl;
+  }
+
   const repoName = location.pathname.split("/")[1]; // "epub-hub"
   const baseUrl = location.origin + "/" + repoName + "/";
-  const resolved = new URL(bookUrl.replace(/^\\//,''), baseUrl);
+  const resolved = new URL(bookUrl, baseUrl);
 
   downloadA.href = resolved.href;
 
-  let book, rendition;
   try {
-    book = ePub(resolved.href);
-    rendition = book.renderTo("viewer", { width: "100%", height: "100%" });
+    const book = ePub(resolved.href);
+    const rendition = book.renderTo("viewer", { width: "100%", height: "100%" });
     rendition.display();
 
     prevBtn.addEventListener('click', () => rendition.prev());
@@ -94,7 +98,7 @@
     });
   } catch(e){
     msg.style.display='block';
-    msg.textContent = '미리보기를 여는 중 오류가 발생했습니다: ' + (e && e.message ? e.message : e);
+    msg.textContent = '미리보기 오류: ' + (e && e.message ? e.message : e);
   }
 })();
 </script>
