--- a/viewer.html
+++ b/viewer.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>EPUB 미리보기</title>
   <style>
-    :root{ --bg:#0f172a; --card:#111827; --muted:#94a3b8; --text:#e2e8f0; --accent:#22c55e; --blue:#60a5fa; }
+    :root{ --bg:#0f172a; --card:#111827; --muted:#94a3b8; --text:#e2e8f0; --accent:#22c55e; }
     *{box-sizing:border-box}
     body{margin:0;padding:16px;background:var(--bg);color:var(--text);font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial}
     .wrap{max-width:980px;margin:0 auto}
@@ -32,15 +32,14 @@
   </div>
   <div id="viewer"></div>
   <div id="msg" class="error" style="display:none"></div>
-  <div class="muted" style="margin-top:10px">같은 저장소(같은 출처)의 EPUB만 미리보기가 안정적으로 동작합니다. 외부 링크는 CORS/보안 정책으로 제한될 수 있습니다.</div>
 </div>
+
 <script src="js/epub.min.js"></script>
 <script>
 (function(){
   const p = new URLSearchParams(location.search);
-  const bookUrl = p.get('book');
+  let bookUrl = p.get('book');
   const msg = document.getElementById('msg');
-  const viewer = document.getElementById('viewer');
   const tocSel = document.getElementById('toc');
   const prevBtn = document.getElementById('prev');
   const nextBtn = document.getElementById('next');
@@ -53,17 +52,27 @@
     return;
   }
 
-  downloadA.href = bookUrl;
+  // ✅ 절대 URL로 보정
+  bookUrl = bookUrl.replace(/^\//, ""); // 앞 / 제거
+  if (!bookUrl.startsWith("epub/")) {
+    bookUrl = "epub/" + bookUrl;
+  }
+  const repoName = location.pathname.split("/")[1]; // "epub-hub"
+  const baseUrl = location.origin + "/" + repoName + "/";
+  const resolvedUrl = new URL(bookUrl, baseUrl).href;
 
-  let book, rendition;
+  // 다운로드 버튼 링크 갱신
+  downloadA.href = resolvedUrl;
+
   try {
-    book = ePub(bookUrl);
-    rendition = book.renderTo("viewer", { width: "100%", height: "100%" });
+    const book = ePub(resolvedUrl);   // ✅ 절대경로로 전달
+    const rendition = book.renderTo("viewer", { width: "100%", height: "100%" });
     rendition.display();
 
     prevBtn.addEventListener('click', () => rendition.prev());
     nextBtn.addEventListener('click', () => rendition.next());
 
+    // TOC
     book.loaded.navigation.then(function(toc){
       tocSel.innerHTML = "";
       (toc.toc || []).forEach(function(ch){
@@ -78,6 +87,7 @@
       });
     });
 
+    // Metadata
     book.loaded.metadata.then(function(m){
       const bits = [];
       if(m.title) bits.push(m.title);
@@ -87,7 +97,7 @@
     });
   } catch(e){
     msg.style.display='block';
-    msg.textContent = '미리보기를 여는 중 오류가 발생했습니다: ' + (e && e.message ? e.message : e);
+    msg.textContent = '미리보기 오류: ' + (e && e.message ? e.message : e);
   }
 })();
 </script>
