--- a/index.html
+++ b/index.html
@@ -45,19 +45,13 @@
 
   <div class="footer">
     이 페이지 링크를 QR로 만들면, 태블릿에서 QR 스캔 → 이 화면이 열립니다.<br/>
-    <!-- 필요시 날짜/안내 문구 수정 -->
   </div>
 
 <script>
-/**
- * ✅ DATASET 예시
- * - 파일링크는 같은 저장소의 파일을 가리키면 미리보기 가능 (예: "epub/xxx.epub" 또는 "/epub/xxx.epub")
- * - 외부 링크(구글드라이브 등)는 다운로드만 가능 (CORS 제약으로 미리보기 제한)
- */
 const DATASET = [
-  { "소속":"서대문구 평생학습관 융복합인재교육센터", "작가명":"테스트강의자1", "작품명":"테스트",  "파일링크":"epub/test.epub" },
-  { "소속":"서대문구 평생학습관 융복합인재교육센터", "작가명":"테스트강의자2", "작품명":"테스트2", "파일링크":"epub/test2.epub" },
-  { "소속":"서대문구 평생학습관 융복합인재교육센터", "작가명":"테스트강의자3", "작품명":"테스트3", "파일링크":"epub/test3.epub" }
+  { "소속":"서대문구 평생학습관", "작가명":"테스트강의자1", "작품명":"테스트",  "파일링크":"epub/test.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"테스트강의자2", "작품명":"테스트2", "파일링크":"epub/test2.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"테스트강의자3", "작품명":"테스트3", "파일링크":"epub/test3.epub" }
 ];
 
 // 고유 작가명 리스트
@@ -83,13 +77,14 @@ function renderList(){
   const area = document.getElementById("listArea");
   const lecturer = document.getElementById("lecturerSelect").value;
   const q = document.getElementById("searchInput").value.trim().toLowerCase();
+  const repoName = location.pathname.split("/")[1]; // "epub-hub"
 
   let arr = DATASET.slice();
   if(lecturer && lecturer !== "(전체)") arr = arr.filter(x => x["작가명"]===lecturer);
   if(q){
     arr = arr.filter(x =>
       (x["작품명"]||"").toLowerCase().includes(q) ||
-      (x["소속"]||"").toLowerCase().includes(q)   ||
+      (x["소속"]||"").toLowerCase().includes(q) ||
       (x["작가명"]||"").toLowerCase().includes(q)
     );
   }
@@ -129,10 +124,9 @@ function renderList(){
         <div class="actions"></div>
       `;
 
-      // 액션 영역
       const actions = row.querySelector('.actions');
 
-      // 항상 다운로드 버튼은 그림
+      // 다운로드 버튼
       const dl = document.createElement('a');
       dl.className = 'btn';
       dl.href = raw;
@@ -141,7 +135,7 @@ function renderList(){
       dl.textContent = '다운로드';
       actions.appendChild(dl);
 
-      // ✅ 같은 출처 + /epub/ 경로 + .epub 확장자면 미리보기 버튼 표시
+      // ✅ 미리보기 버튼
       let u = null;
       try { u = new URL(raw, location.href); } catch (e) {}
       const isSameOrigin = u && u.origin === location.origin;
@@ -149,9 +143,13 @@ function renderList(){
       const looksLikeEpub = p.includes("/epub/") && p.endsWith(".epub");
 
       if (isSameOrigin && looksLikeEpub) {
+        let relative = raw.replace(/^\//, "");
+        if (relative.startsWith(repoName + "/")) {
+          relative = relative.substring(repoName.length + 1);
+        }
         const pv = document.createElement('a');
         pv.className = 'btn alt';
-        pv.href = 'viewer.html?book=' + encodeURIComponent(u.pathname.startsWith('/') ? u.pathname.slice(1) : u.pathname);
+        pv.href = 'viewer.html?book=' + encodeURIComponent(relative);
         pv.target = '_blank';
         pv.rel = 'noopener';
         pv.textContent = '미리보기';
