--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>EPUB 미리보기 (Dark Theme)</title>
+    <title>EPUB 미리보기</title>
     <style>
       body {
         margin: 0;
