--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div id="listArea"></div>
 
   <div class="footer">
-    이 페이지 링크를 QR로 만들면, 태블릿에서 QR 스캔 → 이 화면이 열립니다.<br/>
+    서대문구 평생학습관 융복합 인재교육센터<br/>
   </div>
 
 <script>
