--- a/viewer.html
+++ b/viewer.html
@@ -44,7 +44,7 @@
     </style>
   </head>
   <body>
-    <h2>📖 EPUB 미리보기 (Dark Theme)</h2>
+    <h2>📖 EPUB 미리보기</h2>
     <div class="bar">
       <button id="prev" class="btn">← 이전</button>
       <button id="next" class="btn">다음 →</button>
