--- a/viewer.html
+++ b/viewer.html
@@ -44,13 +44,16 @@
     </style>
   </head>
   <body>
+    <div>      
+      <button id="home" class="btn">🏠 돌아가기</button>
+    </div>
     <h2>📖 EPUB 미리보기</h2>
     <div class="bar">
       <button id="prev" class="btn">← 이전</button>
       <button id="next" class="btn">다음 →</button>
       <select id="toc"></select>
       <a id="download" class="btn" href="#" download>다운로드</a>
-      <span id="meta"></span>
+      <div id="meta"></div>
     </div>
     <div id="viewer"></div>
     <div id="msg" class="error" style="display: none"></div>
