--- a/viewer.html
+++ b/viewer.html
@@ -45,7 +45,8 @@
   </head>
   <body>
     <div>      
-      <button id="home" class="btn">🏠 돌아가기</button>
+      <button id="home" onclick="location.href='index.html'" class="btn">🏠 돌아가기</button>
+      
     </div>
     <h2>📖 EPUB 미리보기</h2>
     <div class="bar">
