--- a/viewer.html
+++ b/viewer.html
@@ -45,7 +45,7 @@
   </head>
   <body>
     <div>      
-      <button id="home" onclick="location.href='index.html'" class="btn">🏠 돌아가기</button>
+      <button id="home" onclick="history.back()" class="btn">뒤로가기</button>
       
     </div>
     <h2>📖 EPUB 미리보기</h2>
