--- a/intro_qr.html
+++ b/intro_qr.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body >
-    <div style="margin-left: 20px; margin-right: 20px;">
+    <div>
         <h2>2025 서울동행인문학</h2>
         <h3>(한사람을 위한 미술 인문학) </h3>
         <h3>개인을 넘어 우리 :</h3>
