--- a/intro_qr.html
+++ b/intro_qr.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style:"margin: 0 auto">
         <h2>2025 서울동행인문학</h2>
         <h3>(한사람을 위한 미술 인문학) </h3>
         <h3>개인을 넘어 우리 :</h3>
