--- a/index.html
+++ b/index.html
@@ -49,9 +49,19 @@
 
 <script>
 const DATASET = [
-  { "소속":"서대문구 평생학습관", "작가명":"테스트강의자1", "작품명":"테스트",  "파일링크":"epub/test.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"테스트강의자2", "작품명":"테스트2", "파일링크":"epub/test2.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"테스트강의자3", "작품명":"테스트3", "파일링크":"epub/test3.epub" }
+  { "소속":"서대문구 평생학습관", "작가명":"구희진", "작품명":"구희진_",  "파일링크":"epub/구희진작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"김미연", "작품명":"김미연_", "파일링크":"epub/김미연작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"김은진", "작품명":"김은진_", "파일링크":"epub/김은진작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"김조세린", "작품명":"_", "파일링크":"epub/김조세린작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"박진경", "작품명":"_", "파일링크":"epub/박진경작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"오진경", "작품명":"_", "파일링크":"epub/오진경작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"이선화", "작품명":"_", "파일링크":"epub/이선화작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"이재홍", "작품명":"_", "파일링크":"epub/이재홍작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"이정은", "작품명":"_", "파일링크":"epub/이정은작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"장영숙", "작품명":"_", "파일링크":"epub/장영숙작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"정연경", "작품명":"_", "파일링크":"epub/정연경작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"정혜욱", "작품명":"_", "파일링크":"epub/정혜욱작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"조미영", "작품명":"_", "파일링크":"epub/조미영작가_f.epub" }
 ];
 
 // 고유 작가명 리스트
