--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
 
 <script>
 const DATASET = [
-  { "소속":"서대문구 평생학습관", "작가명":"구희진", "작품명":"구희진_",  "파일링크":"epub/구희진작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"김미연", "작품명":"김미연_", "파일링크":"epub/김미연작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"김은진", "작품명":"김은진_", "파일링크":"epub/김은진작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"김조세린", "작품명":"_", "파일링크":"epub/김조세린작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"박진경", "작품명":"_", "파일링크":"epub/박진경작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"오진경", "작품명":"_", "파일링크":"epub/오진경작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"이선화", "작품명":"_", "파일링크":"epub/이선화작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"이재홍", "작품명":"_", "파일링크":"epub/이재홍작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"이정은", "작품명":"_", "파일링크":"epub/이정은작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"장영숙", "작품명":"_", "파일링크":"epub/장영숙작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"정연경", "작품명":"_", "파일링크":"epub/정연경작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"정혜욱", "작품명":"_", "파일링크":"epub/정혜욱작가_f.epub" },
-  { "소속":"서대문구 평생학습관", "작가명":"조미영", "작품명":"_", "파일링크":"epub/조미영작가_f.epub" }
+  { "소속":"서대문구 평생학습관", "작가명":"구희진", "작품명":"Stage in the FOREST 숲속 무대",  "파일링크":"epub/구희진작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"김미연", "작품명":"희망안에서", "파일링크":"epub/김미연작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"김은진", "작품명":"꽃은, 다시 핀다", "파일링크":"epub/김은진작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"김조세린", "작품명":"오늘의 나를 만든 어제의 숨결", "파일링크":"epub/김조세린작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"박진경", "작품명":"고통을 넘어 희망으로", "파일링크":"epub/박진경작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"오진경", "작품명":"스쳐간 순간들이 모여 내 안에 길을 놓았다", "파일링크":"epub/오진경작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"이선화", "작품명":"달팽이의 아침.저녁 그리고.지금", "파일링크":"epub/이선화작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"이재홍", "작품명":"허우적거리며 배우다", "파일링크":"epub/이재홍작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"이정은", "작품명":"삶을 잇는 작은 실", "파일링크":"epub/이정은작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"장영숙", "작품명":"괜찮아, 오늘도... 괜찮아, 내일도...", "파일링크":"epub/장영숙작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"정연경", "작품명":"60+ 삶을 향한 깊은 뿌리와 새로운 가치", "파일링크":"epub/정연경작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"정혜욱", "작품명":"삶은 여행이고, 나는 여전히 길위에 있다.", "파일링크":"epub/정혜욱작가_f.epub" },
+  { "소속":"서대문구 평생학습관", "작가명":"조미영", "작품명":"숨빛 Breathing light", "파일링크":"epub/조미영작가_f.epub" }
 ];
 
 // 고유 작가명 리스트
